fixed the spacing

--- a/style.css
+++ b/style.css
@@ -497,7 +497,7 @@ font-size: 35px;
 }
 }
 
-@media(min-width: 425px)
+@media(max-width: 425px)
 {
     .padding {
         padding-left: 1em;
